@@ -111,7 +111,12 @@ function im = itk_imfilter(~, ~)
 %   Note: A should have a signed type (e.g. int16, single). Images
 %   with unsigned types (e.g. uint16) will cause intermediate results
 %   that should be negative to be truncated to 0, and the result will
-%   not be meaningful.
+%   not be meaningful. The best compromise between accuracy and
+%   saving memory seems to be type single (= float).
+%
+%   Note: While it is possible to run the filter on a NRRD struct,
+%   results seem better if run directly on the image (nrrd.data). The
+%   filter doesn't seem to be spacing invariant.
 %
 %   SIGMAMIN, SIGMAMAX are scalars with the limits of the multiscale
 %   scheme, in the same units as the image. They should be set to
@@ -122,6 +127,11 @@ function im = itk_imfilter(~, ~)
 %   analysis. The scales change exponentially, not linearly. Casual
 %   testing suggests that the final result does not depend heavily on
 %   this parameter. By default, NUMSIGMASTEPS=10.
+%
+%   ISSIGMASTEPLOG is a boolean that determines whether the
+%   intermediate scales between SIGMAMIN to SIGMAMAX are distributed
+%   logarithmically (true) or linearly (false). The latter seems to
+%   work better for small ranges.
 %
 %   NUMITERATIONS is a scalar with the number of times the multiscale
 %   anisotropic difussion method is run. In practice, a higher number
@@ -148,7 +158,7 @@ function im = itk_imfilter(~, ~)
  
 % Author: Ramon Casero <rcasero@gmail.com>
 % Copyright © 2011 University of Oxford
-% Version: 0.4.5
+% Version: 0.4.6
 % $Rev$
 % $Date$
 %
